# megamol

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .megamol.plg.win.cache  .travis.yml  2windows.mmprj  4Views.mmprj  AbstractDataWriter.cpp  AbstractDataWriter.h  AbstractDataWriterBase.h  AbstractGPUSurface.cpp  AbstractGPUSurface.h  AbstractGetData3DCall.cpp  AbstractGetData3DCall.h  AbstractGetDataCall.cpp  AbstractGetDataCall.h  AbstractNamedObject.cpp  AbstractNamedObject.h  AbstractNamedObjectContainer.cpp  AbstractNamedObjectContainer.h  AbstractParticleManipulator.cpp  AbstractParticleManipulator.h  AbstractSlot.h  AbstractTriMeshDataSource.cpp  AbstractTriMeshDataSource.h  AbstractTriMeshLoader.cpp  AbstractTriMeshLoader.h  AbstractVTKLegacyData.cpp  AbstractVTKLegacyData.h  AggregatedDensity.cpp  AggregatedDensity.h  AnimDataTimer.cpp  AnimDataTimer.h  ApiHandle.cpp  BSpline.cpp  BSpline.h  Base64.cpp  (+600 more)
3rd/: CMakeLists.txt
3rd/nanoflann/: readme.txt
3rd/nanovg/: fontstash.h  nanovg.h  nanovg_gl.h  stb_truetype.h
Console/: AboutInfo.cpp  AboutInfo.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  Console.cpp  Console.vcproj  Console.vcxproj  Console.vcxproj.filters  CoreHandle.cpp  CoreHandle.h  GUILayer.cpp  GUILayer.h  HotKeyAction.cpp  HotKeyAction.h  HotKeyButtonParam.cpp  HotKeyButtonParam.h  HotKeyCallback.cpp  HotKeyCallback.h  JobManager.cpp  JobManager.h  Makefile  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  icons.rc  packages.config  stdafx.cpp  stdafx.h  versioninfo.h
Glut/: ApiHandle.cpp  ApiHandle.h  CMakeLists.txt  CallbackSlot.cpp  CallbackSlot.h  Glut.vcproj  Glut.vcxproj  Glut.vcxproj.filters  Makefile  MegaMolViewer.cpp  NVSwapGroupController.cpp  NVSwapGroupController.h  VersionInfo.pl  Viewer.cpp  Viewer.h  Window.cpp  Window.h  icons.rc  stdafx.h  version.template.h  versioninfo.h
cmake/ImGui/: CMakeLists.txt
cmake/bhtsne/: CMakeLists.txt
cmake/quickhull/: CMakeLists.txt
configurator/: CMakeLists.txt  MegaMolConf.sln
configurator/MegaMolConf/: CallSelector.Designer.cs  CallSelector.cs  ColorDialog.Designer.cs  ColorDialog.cs  ColorEditor.cs  EnumParamEditor.cs  FlexEnumParamEditor.cs  Form1.Designer.cs  Form1.cs  Form1.resx  GraphicalConnection.cs  GraphicalModule.cs  GraphicalModuleButtonParameterDescriptor.cs  GraphicalModuleDescriptor.cs  GraphicalModuleMainViewDescriptor.cs  GraphicalModuleNameDescriptor.cs  GraphicalModuleParameterDescriptor.cs  ImportParamfileForm.Designer.cs  ImportParamfileForm.cs  MegaMolConf.csproj  MegaMolConf.csproj.input  MegaMolInstanceInfo.cs  NoStupidScrollingPanel.cs  NoflickerPanel.cs  ObservingDict.cs  Program.cs  StartParamDialog.Designer.cs  StartParamDialog.cs  StringSelector.Designer.cs  StringSelector.cs  TabPageDescriptor.cs  TransferFunc1DDialog.Designer.cs  TransferFunc1DDialog.cs  TransferFunc1DDialog.resx  TransferFunc1DEditor.cs  TransferFunctionDialog.Designer.cs  TransferFunctionDialog.cs  TransferFunctionDialog.resx  VersionInfo.pl  app.config  (+1 more)
configurator/cmake/: FindRC.cmake
configurator/rev2ver/: Icon.psd  RelevanceChecker.pm  SvnWrapper.pm  lorem.txt  rev2ver.inc  sample.pl
console/: CMakeLists.txt  Console.vcxproj.filters  cmake_build.sh
console/AntTweakBar/: CMakeLists.txt
console/cmake/: FindAntTweakBar.cmake  FindGLFW3.cmake  linkAntTweakBar.cmake.in
console/extra/: install_megamol_cfg.cmake.in  install_megamolconfig_lua.cmake.in  megamol.cfg  megamol.sh  megamol.sh.in  megamolconfig.lua.in
console/glfw/: CMakeLists.txt
console/src/: AbstractUILayer.cpp  AbstractUILayer.h  ButtonParamUILayer.cpp  ButtonParamUILayer.h  Console.cpp  CoreHandle.cpp  CoreHandle.h  JobManager.cpp  JobManager.h  UILayersCollection.cpp  UILayersCollection.hpp  ViewMouseUILayer.cpp  ViewMouseUILayer.h  ViewUILayer.cpp  ViewUILayer.h  WindowManager.cpp  WindowManager.h  stdafx.cpp  stdafx.h  versioninfo.h
core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  D3D.props.input  ExtLibs.props.input  VersionInfo.pl  configure.win.pl  icons.rc  mpi.props  packages.config
core/Resources/: Evolventa-SansSerif.fnt  Roboto-SansSerif.fnt  Ubuntu-Mono.fnt  Vollkorn-Serif.fnt  evolventa.fnt  verdana.fnt
core/Shaders/: arrow.btf  arrow.glfp  arrow.glvp  bezier.btf  bitflags.btf  common.btf  commondefines.glsl  core_utils.btf  cylinder.glvp  d3d11sphere.btf  deferred.btf  dfrLambert.btf  extbezier.btf  flag_storage.btf  geosphere.btf  lightdirectional.glsl  lines.btf  mdao2.btf  mdao2volume.btf  mipdepth.btf  mipdepth2.btf  mipdepth3.btf  mipdepth4.btf  mipdepth5.btf  mipdepth6.btf  mipdepth_spheretouchplane.glsl  ngbufferarray.btf  ngsphere.btf  ngspherebufferarray.btf  ngsplat.btf  oraclesphere.btf  perpixellight.glfp  phong.glsl  primitives.btf  sdffont.btf  sdffont.glfs  sdffont.glvs  simplegeosphere.btf  simplesphere.btf  simplesphere.double.btf  (+15 more)
core/cmake/: FindLIBUNWIND.cmake
core/expat/: CMakeLists.txt
core/libpng/: CMakeLists.txt
core/lua/: CMakeLists.txt
core/remoteconsole/: CMakeLists.txt
core/resources/: Evolventa-SansSerif.fnt  Vollkorn-Serif.fnt
core/src/: AbstractDataWriter.cpp  AbstractDataWriterCall.cpp  AbstractGetData3DCall.cpp  AbstractGetDataCall.cpp  AbstractNamedObject.cpp  AbstractNamedObjectContainer.cpp  AbstractService.cpp  AbstractSlot.cpp  AbstractStreamProvider.cpp  AbstractWriterParams.cpp  ApiHandle.cpp  BoundingBoxes.cpp  BoundingBoxes_2.cpp  Call.cpp  CallCapabilities.cpp  CallProfiling.cpp  CallVolumeData.cpp  CalleeSlot.cpp  CallerSlot.cpp  CoreInstance.cpp  DataWriterCtrlCall.cpp  DeferredShading.cpp  DirectDataWriterCall.cpp  EventCollection.cpp  EventStorage.cpp  FileStreamProvider.cpp  (+29 more)
core_gl/: CMakeLists.txt
frontend_gui/: CMakeLists.txt
input_events/: CMakeLists.txt
plugins/: CMakeLists.txt
render_api/: CMakeLists.txt
tests/: CMakeLists.txt
utils/: CMakeLists.txt  GLStateChecker.py  Readme.md  drmemsuppress.txt  screenieMetadata.py  screenieToMegaMol.py
vislib/: CMakeLists.txt  LICENCE.TXT  makevislibversion.pl  vislib.kdev4  vislib.sln
vislib_gl/: CMakeLists.txt
(+11965 files in other folders)
